# CodeHero

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  source_template.h
cmake/: clang-cxx-dev-tools.cmake
codehero/: main.cpp
codehero/core/: assert.h  color.cpp  color.h  enginecontext.cpp  enginecontext.h  errors.h  fileaccess.cpp  fileaccess.h  filesystem.cpp  filesystem.h  gpuobject.h  image.cpp  image.h  imagecodec.cpp  imagecodec.h  imageloader.cpp  imageloader.h  object.cpp  object.h  objectdefinition.cpp  objectdefinition.h  rendersystem.h  renderwindow.h  resourcecache.cpp  resourcecache.h  resourcecodec.h  resourceloader.h  scopecleaner.h  serializable.cpp  serializable.h  shader.cpp  shader.h  shaderprogram.h  system.cpp  system.h  texture.cpp  texture.h  texturemanager.h  time.cpp  time.h  (+7 more)
codehero/core/logging/: bufferlogger.h  filelogger.h  iloglistener.h  logger.cpp  logger.h
codehero/core/math/: matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  utils.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
codehero/core/type_traits/: attributeaccessor.h  attributeaccessor_impl.h  attributeaccessorcast_impl.h  attributeaccessorcustom_impl.h  attributeaccessorenum_impl.h  attributeinfo.h  objectdefinition.cpp  objectdefinition.h
codehero/drivers/assimp/: iosystem.cpp  iosystem.h  modelcodec_assimp.cpp  modelcodec_assimp.h
codehero/drivers/dds/: imagecodec_dds.cpp  imagecodec_dds.h
codehero/drivers/jpg/: imagecodec_jpg.cpp  imagecodec_jpg.h
codehero/drivers/png/: imagecodec_png.cpp  imagecodec_png.h
codehero/drivers/tga/: imagecodec_tga.cpp  imagecodec_tga.h
codehero/drivers/xml/: serializablecodec_xml.cpp  serializablecodec_xml.h
codehero/graphics/: batch.cpp  batch.h  bone.h  boundingbox.cpp  boundingbox.h  camera.cpp  camera.h  component.h  cube.cpp  cube.h  drawable.cpp  drawable.h  indexbuffer.cpp  indexbuffer.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  node.cpp  node.h  plane.cpp  plane.h  rendersystem.cpp  rendersystem.h  renderwindow.h  scene.cpp  scene.h  shader.cpp  shader.h  shaderinstance.cpp  shaderinstance.h  shaderprogram.cpp  shaderprogram.h  skybox.cpp  skybox.h  technique.cpp  (+4 more)
codehero/input/: input.cpp  input.h  inputevents.h
codehero/main/: main.cpp  main.h
codehero/rendersystems/GL/: indexbufferGL.cpp  indexbufferGL.h  rendersystemGL.cpp  rendersystemGL.h  renderwindowGL.cpp  renderwindowGL.h  shaderGL.cpp  shaderGL.h  shaderinstanceGL.cpp  shaderinstanceGL.h  shaderprogramGL.cpp  shaderprogramGL.h  textureGL.cpp  textureGL.h  texturemanagerGL.h  utils.cpp  utils.h  vertexattribbinding.cpp  vertexattribbinding.h  vertexbufferGL.cpp  vertexbufferGL.h
codehero/shaders/: cs_basic.vert  lighting.frag  shader.frag  shader_basic1.vert  shader_basic_texture_1.frag  shader_basic_texture_1.vert  shader_basic_trans.frag  skybox.frag  skybox.vert  text_basic.frag  text_basic.vert  textured.frag  textured.vert
codehero/ui/: button.cpp  button.h  font.cpp  font.h  fontface.cpp  fontface.h  fontface_freetype.cpp  fontface_freetype.h  label.cpp  label.h  stylesheet.cpp  stylesheet.h  text.cpp  text.h  ui.cpp  ui.h  uibatch.cpp  uibatch.h  uidraw.cpp  uidraw.h  uielement.cpp  uielement.h  window.cpp  window.h
docs/: compilation.md  logger.md  style.md  todos.md
resources/models/small-house-diorama/: tree_canopy.tga
resources/models/small-house-diorama/source/: Dio.mtl  grass.tga  smoke.tga
resources/models/treasure-chest/: Chest.fbx  Chest.mtl
resources/samples/: crate.xml  dir_light1.xml  grass.xml  point_light1.xml  scene_test1.xml  shaderProgram_texturedAlpha.xml  shaderProgram_texturedNoAlpha.xml  shader_texturedFragAlpha.xml  shader_texturedFragNoAlpha.xml  skybox.xml  skybox_material.xml  technique_Diffuse.xml  technique_DiffuseAlpha.xml  technique_DiffuseAlphaOpacity.xml  technique_DiffuseOpacity.xml  technique_DiffuseSpecular.xml  technique_DiffuseSpecularAlpha.xml  technique_DiffuseSpecularAlphaOpacity.xml  technique_DiffuseSpecularOpacity.xml  technique_NoTexture.xml  technique_NoTextureOpacity.xml  technique_skybox.xml  technique_texturedAlpha.xml  technique_texturedAlphaMap.xml  texture_FloorDiffuse.xml
scripts/: cpplint.py  create_file.py
scripts/lib/: util.py
specs/: CMakeLists.txt  main.cpp
specs/unit/core/: utils.specs.cpp  variant.specs.cpp
specs/unit/core/math/: matrix3.specs.cpp  matrix4.specs.cpp  quaternion.specs.cpp  utils.specs.cpp  vector2.specs.cpp  vector3.specs.cpp  vector4.specs.cpp
src/: main.cpp
src/codehero/: CodeHero.cpp  CodeHero.h
src/core/: CMakeLists.txt  Core.cpp  Core.h  CoreAPI.h  IModule.h  Macros.h  Module.h  ModuleManager.cpp  ModuleManager.h  ScopeCleaner.h  String.h  TypeDefs.h
src/core/HAL/: Platform.h  SharedLibraryHandler.h
src/core/logger/: ILogListener.h  Logger.cpp  Logger.h  WConsoleLogger.h
src/core/platform/common/: CommonSharedLibraryHandler.cpp  CommonSharedLibraryHandler.h
src/core/platform/windows/: SharedLibraryHandler.cpp  SharedLibraryHandler.h  WindowsPlatform.h
src/dummy/: CMakeLists.txt  DummyModule.cpp  DummyModule.h
src/engine/: CMakeLists.txt  EngineAPI.h  EngineLoop.cpp  EngineLoop.h
src/platform/: CMakeLists.txt  IPlatformWindow.h  PlatformModule.cpp  PlatformModule.h  PlatformWindowParams.h
src/platform/HAL/: PlatformWindow.h
src/platform/windows/: WindowsPlatformWindow.cpp  WindowsPlatformWindow.h
src/renderer/: IRendererModule.h  Renderer.h  RendererModule.h  Window.h
src/renderer/GL/: CMakeLists.txt  GLAPI.h  GLPlatform.h  GLRenderer.cpp  GLRenderer.h  GLRendererModule.cpp  GLRendererModule.h  GLUtils.cpp  GLWindow.cpp  GLWindow.h  IGLContext.h  RendererGL.cpp  RendererGL.h  RendererGLModule.cpp  RendererGLModule.h  Utils.cpp  Utils.h  WindowGL.cpp  WindowGL.h
src/renderer/GL/HAL/: GLApi.h  GLContext.h
src/renderer/GL/windows/: GLContextWGL.cpp  GLContextWGL.h  GLPlatform.cpp  WGLApi.h
